--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <title>My Webpack Learning</title>
 </head>
 
-<body>
-    <div class="root"></div>
+<body class="bg-gray-500">
+
 </body>
 
 </html>
