--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,17 @@
     <title>My Webpack Learning</title>
 </head>
 
-<body class="bg-gray-500">
-
+<body class="m-5 bg-black">
+    <div class="w-full px-4 py-3 flex box-border rounded-lg bg-slate-600">
+        <div class="w-12 mr-3 flex-shrink-0 rounded-full overflow-hidden">
+            <img src="https://bruce-fe-fb.web.app/image/avator.png" alt="">
+        </div>
+        <button class="flex-1 rounded-full bg-gray-600">
+            <p class="text-left pl-3 text-gray-400 text-sm">
+                Hi How are you?
+            </p>
+        </button>
+    </div>
 </body>
 
 </html>
