--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body class="m-5 bg-black">
-    <div class="w-full px-4 py-3 flex box-border rounded-lg bg-gray-800">
+    <div class="w-full px-4 py-3 flex box-border rounded-lg bg-gray-800 sm:bg-red-400 md:bg-yellow-400 xx:bg-green-400">
         <div class="w-12 mr-3 flex-shrink-0 rounded-full overflow-hidden">
             <img src="https://bruce-fe-fb.web.app/image/avator.png" alt="">
         </div>
-        <button class="flex-1 rounded-full bg-gray-600">
+        <button class="flex-1 rounded-full bg-gray-600 active:ring-4 transition-all">
             <p class="text-left pl-3 text-gray-400 text-sm">
-                Hi~~ How are you 😃 ?
+                Hi~~ How are you ?
             </p>
         </button>
     </div>
