--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>My Webpack Learning</title>
 </head>
 
-<body class="m-5 bg-black">
+<body>
     <div class="w-full px-4 py-3 flex box-border rounded-lg bg-gray-800 sm:bg-red-400 md:bg-yellow-400 xx:bg-green-400">
         <div class="w-12 mr-3 flex-shrink-0 rounded-full overflow-hidden">
             <img src="https://bruce-fe-fb.web.app/image/avator.png" alt="">
