--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,14 @@
         <div class="w-12 mr-3 flex-shrink-0 rounded-full overflow-hidden">
             <img src="https://bruce-fe-fb.web.app/image/avator.png" alt="">
         </div>
-        <button class="flex-1 rounded-full bg-gray-600 active:ring-4 transition-all bg-fill bg-[#099]">
+        <button class="flex-1 rounded-full bg-gray-600 active:ring-4 transition-all">
             <p class="text-left pl-3 text-gray-400 text-sm">
                 Hi~~ How are you ?
             </p>
         </button>
     </div>
+    <div class="bg-red-400/10 w-[20px] h-14"></div>
+    <div class="before:content-['test'] before:block before:bg-blue-500 after:flex after:bg-pink-300 after:content-['after']"></div>
 </body>
 
 </html>
