--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="card">
+    <div class="card scale-75">
         <div class="w-12 mr-3 flex-shrink-0 rounded-full overflow-hidden">
             <img src="https://bruce-fe-fb.web.app/image/avator.png" alt="">
         </div>
@@ -19,8 +19,10 @@
             </p>
         </button>
     </div>
-    <div class="bg-red-400/10 w-[20px] h-14"></div>
+    <div class="bg-red-400/25 w-[20px] h-14"></div>
     <div class="before:content-['test'] before:block before:bg-blue-500 after:flex after:bg-pink-300 after:content-['after']"></div>
+    <div class="w-12 h-12 test">test</div>
+    <p class="text-[length:var(--peter-title)] text-[color:var(--peter-text)]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, cupiditate.</p>
 </body>
 
 </html>
