--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
     <div class="before:content-['test'] before:block before:bg-blue-500 after:flex after:bg-pink-300 after:content-['after']"></div>
     <div class="w-12 h-12 test">test</div>
     <p class="text-[length:var(--peter-title)] text-[color:var(--peter-text)]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, cupiditate.</p>
-</body>
 
+    <button id="dark" class="text-white px-10 py-2 rounded-full bg-[#3e3e3e] ring-4">dark</button>
+    <button id="light" class="text-black px-10 py-2 rounded-full bg-white ring-4">light</button>
+</body>
+<script src="./index.js"></script>
 </html>
